--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@daveyplate/better-auth-ui": "^2.1.3",
+    "@neondatabase/serverless": "^1.0.1",
+    "better-auth": "^1.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.1",
+    "drizzle-orm": "^0.44.4",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
+    "resend": "^4.7.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
@@ -26,6 +32,7 @@
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.32.0",
     "eslint-config-next": "15.4.5",
     "eslint-config-prettier": "^10.1.8",
@@ -33,6 +40,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.11",
+    "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5.9.2"
   }
