--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@daveyplate/better-auth-ui": "^2.1.3",
     "@neondatabase/serverless": "^1.0.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "better-auth": "^1.3.4",
     "class-variance-authority": "^0.7.1",
