--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
     "lucide-react": "^0.536.0",
+    "motion": "^12.23.12",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
     "react": "19.1.1",
